--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,15 @@
 logs
 *.log
 
-#Cache
+# Cache
 *.pyc
 */_pycache_/
+
+# Archives
+*.zip
 
 # Dependency directories
 node/
 VSCode/
 mongoDB/
+venv/
